Recover: Pulled restored version from GAS

--- a/css.html
+++ b/css.html
@@ -1241,6 +1241,7 @@
     border: 1px solid #eeeeee;
     background: #ffffff;
     user-select: none;
+    -webkit-user-select: none;
     min-width: 0;
     padding: 0 10px;
   }
@@ -1600,6 +1601,645 @@
     .member-dash-circle {
       width: 20px;
       height: 20px;
+    }
+  }
+
+  /* =============================================
+     오퍼스(Opus) 멤버 대시보드 v2 전용 스타일
+     ============================================= */
+  .member-dashboard-v2 {
+    max-width: 640px;
+    margin: 0 auto;
+    padding: 0 12px 40px;
+    background: #f3f4f6;
+    min-height: 100%;
+  }
+
+  /* 1. 상단바 */
+  .top-bar {
+    position: sticky;
+    top: 0;
+    z-index: 40;
+    background: #f3f4f6;
+    padding: 8px 0 4px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .top-bar-inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    flex-wrap: wrap;
+  }
+
+  .rg {
+    display: inline-flex;
+    align-items: center;
+  }
+
+  .rb {
+    display: inline-flex;
+    align-items: center;
+    height: 32px;
+    padding: 0 16px;
+    border: 1.5px solid #d1d5db;
+    background: #fff;
+    color: #374151;
+    font-size: .82rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    position: relative;
+  }
+
+  .rb:first-child {
+    border-radius: 999px 0 0 999px;
+    z-index: 2;
+  }
+
+  .rb:last-child {
+    border-radius: 0 999px 999px 0;
+    margin-left: -1px;
+    z-index: 1;
+  }
+
+  .rb.on {
+    background: #16a34a;
+    border-color: #16a34a;
+    color: #fff;
+    z-index: 3;
+  }
+
+  .sp {
+    display: inline-flex;
+    align-items: center;
+    gap: 3px;
+    height: 32px;
+    padding: 0 12px;
+    border-radius: 999px;
+    font-size: .82rem;
+    font-weight: 800;
+    color: #fff;
+    user-select: none;
+    -webkit-user-select: none;
+    pointer-events: none;
+  }
+
+  .sp.bid {
+    background: #4f46e5;
+  }
+
+  .sp.rec {
+    background: #fb923c;
+  }
+
+  .sp.chg {
+    background: #1f2937;
+  }
+
+  /* 2. 캘린더 */
+  .cal-nav-bar {
+    position: sticky;
+    top: 44px;
+    z-index: 35;
+    background: #fff;
+    border: 1.5px solid #e5e7eb;
+    border-radius: 14px 14px 0 0;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .06);
+  }
+
+  .cal-nav-inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding: 10px 16px;
+  }
+
+  .cal-c {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+  }
+
+  .cnb {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    border: 1px solid #e5e7eb;
+    background: #fff;
+    cursor: pointer;
+    color: #6b7280;
+    transition: all .15s;
+  }
+
+  .cnb:hover {
+    background: #f3f4f6;
+  }
+
+  .cal-t {
+    font-size: 1.1rem;
+    font-weight: 800;
+    color: #1f2937;
+    min-width: 100px;
+    text-align: center;
+  }
+
+  .cal-d {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    gap: 3px;
+  }
+
+  .cal-d.l {
+    left: 10px;
+  }
+
+  .cal-d.r {
+    right: 10px;
+  }
+
+  .cdot {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
+    font-weight: 800;
+    color: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .2);
+  }
+
+  .cal-body {
+    background: #fff;
+    border: 1.5px solid #e5e7eb;
+    border-top: none;
+    border-radius: 0 0 14px 14px;
+    margin-bottom: 8px;
+    overflow: hidden;
+  }
+
+  .cal-wk {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 2px;
+    padding: 4px 12px;
+    background: #f9fafb;
+    border-bottom: 1px solid #f0f0f0;
+  }
+
+  .cal-wk>div {
+    text-align: center;
+    font-size: .72rem;
+    font-weight: 700;
+    color: #9ca3af;
+    padding: 3px 0;
+  }
+
+  .cal-g {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 3px;
+    padding: 8px 12px 12px;
+  }
+
+  .cd {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 58px;
+    padding: 5px 2px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all .15s;
+    background: #fff;
+    border: 2px solid transparent;
+  }
+
+  .cd.e {
+    cursor: default;
+    background: transparent;
+    border: none;
+  }
+
+  .cd:hover:not(.e) {
+    background: #eef2ff;
+    border-color: #c7d2fe;
+  }
+
+  .cd.t {
+    border-color: #ef4444 !important;
+    background: #fff;
+  }
+
+  .cd.t .dn {
+    color: #ef4444;
+  }
+
+  .cd.fh {
+    background: #f0fdf4 !important;
+    /* 연초록 배경 */
+    border-color: #86efac !important;
+    /* 초록 테두리 */
+  }
+
+  .cd.ph {
+    background: #f1f5f9 !important;
+    /* 연회색 배경 */
+    border-color: #d1d5db !important;
+    /* 회색 테두리 */
+  }
+
+  .cd.pe {
+    background: #fafbfc;
+    opacity: .5;
+  }
+
+  .dn {
+    font-size: .95rem;
+    font-weight: 800;
+    color: #1f2937;
+    line-height: 1;
+    margin-bottom: 4px;
+  }
+
+  .dcs {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0;
+  }
+
+  .dc {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .2);
+    flex-shrink: 0;
+  }
+
+  /* 3. 리스트 카드 */
+  .lc {
+    background: #fff;
+    border: 1.5px solid #e5e7eb;
+    border-radius: 14px;
+    overflow: visible;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .06);
+  }
+
+  .lf {
+    position: sticky;
+    top: 98px;
+    z-index: 25;
+    background: #fff;
+    border: 1.5px solid #e5e7eb;
+    border-bottom: 1px solid #f0f0f0;
+    border-radius: 14px 14px 0 0;
+    margin: -1px;
+    padding: 8px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    flex-wrap: wrap;
+  }
+
+  .lb {
+    display: inline-flex;
+    align-items: center;
+    gap: 3px;
+    height: 32px;
+    padding: 0 12px;
+    border-radius: 999px;
+    font-size: .82rem;
+    font-weight: 800;
+    color: #fff;
+    cursor: pointer;
+    transition: all .15s;
+    user-select: none;
+    border: none;
+  }
+
+  .lb.bid {
+    background: #4f46e5;
+  }
+
+  .lb.rec {
+    background: #fb923c;
+  }
+
+  .lb.chg {
+    background: #1f2937;
+  }
+
+  .lb.off {
+    opacity: .25;
+  }
+
+  .lb-body {
+    padding: 8px 12px 16px;
+  }
+
+  .mdv {
+    text-align: center;
+    padding: 10px 0;
+    margin: 8px -12px 8px;
+  }
+
+  .mdv span {
+    display: inline-block;
+    padding: 7px 50px;
+    border-radius: 999px;
+    font-size: .95rem;
+    font-weight: 800;
+    background: #6b7280;
+    color: #fff;
+    letter-spacing: .05em;
+  }
+
+  .dp {
+    display: inline-block;
+    background: #475569;
+    color: #fff;
+    font-size: .78rem;
+    font-weight: 700;
+    padding: 4px 14px;
+    border-radius: 999px;
+    margin: 8px 0 6px;
+  }
+
+  /* 물건 카드 — 2열 */
+  .ic {
+    background: #fff;
+    border: 3px solid #e2e8f0;
+    border-radius: 14px;
+    padding: 14px;
+    display: flex;
+    gap: 8px;
+    min-height: 90px;
+    margin-bottom: 8px;
+  }
+
+  .ic.sb {
+    border-color: #4f46e5;
+  }
+
+  .ic.sr {
+    border-color: #fb923c;
+  }
+
+  .ic.sc {
+    border-color: #1f2937;
+  }
+
+  .ic-l {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 0;
+  }
+
+  .ic-copy-row {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+  }
+
+  .ic-sakun {
+    font-size: 1.05rem;
+    font-weight: 900;
+    color: #1e293b;
+    line-height: 1.3;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .ic-court {
+    font-size: .76rem;
+    color: #64748b;
+    margin-top: 2px;
+  }
+
+  .ic-price {
+    font-size: 1.1rem;
+    font-weight: 900;
+    color: #ef4444;
+    margin-top: 4px;
+  }
+
+  .copy-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 2px;
+    color: #94a3b8;
+    font-size: .85rem;
+    transition: color .15s;
+    flex-shrink: 0;
+  }
+
+  .ic-r {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 4px;
+    min-width: 80px;
+  }
+
+  .ic-r-row {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+  }
+
+  .badge {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 18px;
+    border-radius: 10px;
+    font-size: .88rem;
+    font-weight: 800;
+    cursor: pointer;
+    border: none;
+    color: #fff;
+    transition: all .15s;
+    white-space: nowrap;
+  }
+
+  .badge.bb {
+    background: #4f46e5;
+  }
+
+  .badge.br {
+    background: #fb923c;
+  }
+
+  .badge.bc {
+    background: #1f2937;
+    cursor: default;
+  }
+
+  .img-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background: #f1f5f9;
+    border: 1.5px solid #e2e8f0;
+    cursor: pointer;
+    transition: all .15s;
+    color: #64748b;
+    font-size: 1rem;
+  }
+
+  .ic-time {
+    font-size: .68rem;
+    color: #9ca3af;
+    white-space: nowrap;
+    padding-left: 0;
+  }
+
+  /* 팝업 / 모달 / 토스트 */
+  .img-popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .85);
+    z-index: 200;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+  }
+
+  .img-popup.open {
+    display: flex;
+  }
+
+  .img-popup-ph {
+    background: #1e293b;
+    border-radius: 16px;
+    padding: 40px 60px;
+    color: #94a3b8;
+    text-align: center;
+    font-size: .9rem;
+  }
+
+  .copy-toast {
+    position: fixed;
+    bottom: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #1e293b;
+    color: #fff;
+    padding: 8px 20px;
+    border-radius: 999px;
+    font-size: .82rem;
+    font-weight: 700;
+    z-index: 300;
+    opacity: 0;
+    transition: opacity .3s;
+    pointer-events: none;
+  }
+
+  .copy-toast.show {
+    opacity: 1;
+  }
+
+  .mo {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .5);
+    z-index: 100;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .mo.open {
+    display: flex;
+  }
+
+  .mx {
+    background: #fff;
+    border-radius: 16px;
+    padding: 24px;
+    max-width: 340px;
+    width: 90%;
+    text-align: center;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, .2);
+  }
+
+  .ma {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+  }
+
+  .mm {
+    flex: 1;
+    padding: 10px 0;
+    border-radius: 10px;
+    font-size: .9rem;
+    font-weight: 700;
+    cursor: pointer;
+    border: none;
+  }
+
+  .mm.c {
+    background: #f1f5f9;
+    color: #475569;
+  }
+
+  .mm.o {
+    background: #4f46e5;
+    color: #fff;
+  }
+
+  .mm.d {
+    background: #ef4444;
+    color: #fff;
+  }
+
+  @media(max-width:480px) {
+    .cd {
+      min-height: 48px;
+      padding: 4px 1px;
+    }
+
+    .dn {
+      font-size: .8rem;
+    }
+
+    .dc {
+      width: 13px;
+      height: 13px;
     }
   }
 </style>
