Fix: Item card data linkage, add sticky bid date badge, remove monthly dividers

--- a/index.html
+++ b/index.html
@@ -249,9 +249,12 @@
                                 <button class="rb on" id="tT" onclick="setR('today')">오늘부터</button>
                                 <button class="rb" id="tA" onclick="setR('all')">전체</button>
                             </div>
-                            <span class="sp bid"><span id="cB">0</span>입찰</span>
-                            <span class="sp rec"><span id="cR">0</span>추천</span>
-                            <span class="sp chg"><span id="cC">0</span>변경</span>
+                            <button class="sp bid pointer-events-auto" id="btn-top-bid" onclick="togF('입찰')"><span
+                                    id="cB">0</span>입찰</button>
+                            <button class="sp rec pointer-events-auto" id="btn-top-rec" onclick="togF('추천')"><span
+                                    id="cR">0</span>추천</button>
+                            <button class="sp chg pointer-events-auto" id="btn-top-chg" onclick="togF('변경')"><span
+                                    id="cC">0</span>변경</button>
                         </div>
                     </div>
 
@@ -289,15 +292,6 @@
 
                     <!-- 3. 리스트 카드 -->
                     <div class="lc">
-                        <div class="lf" id="lfBar">
-                            <div class="rg">
-                                <button class="rb on" id="rT" onclick="setR('today')">오늘부터</button>
-                                <button class="rb" id="rA" onclick="setR('all')">전체</button>
-                            </div>
-                            <button class="lb bid" id="fB" onclick="togF('입찰')"><span id="lB">0</span>입찰</button>
-                            <button class="lb rec" id="fR" onclick="togF('추천')"><span id="lR">0</span>추천</button>
-                            <button class="lb chg" id="fC" onclick="togF('변경')"><span id="lC">0</span>변경</button>
-                        </div>
                         <div class="lb-body" id="iL"></div>
                     </div>
                 </div>
